--- a/kubernetes/service.yaml
+++ b/kubernetes/service.yaml
@@ -1,12 +1,12 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: bookInventory
+  name: bookinventory
   labels:
-    app: bookInventory
+    app: bookinventory
 spec:
   ports:
     - port: 8080
       targetPort: 8080
   selector:
-    app: bookInventory
+    app: bookinventory
